# TieBreakServer

./: .gitignore  LICENSE  README.md  analysenm.py  berger.py  changelog.txt  chessjson.py  chessserver.py  commonmain.py  config.py  convert.py  convert2jch.py  convert2jchserver.py  crosstable-2025-03-18.py  crosstable.py  crosstable2.py  crosstabledutch.py  dbdef.py  dependencies.py  diff.bat  ditt.bat  drawresult.py  fidetables.py  fixgrandmommy.py  gacrux_entry.py  games2matches.py  helpers.py  jsonscheme.py  ngpbgp.md  ngpbgp.py  pairing-2025-03-18.py  pairing.py  pairingberger.py  pairingchecker.py  pairingdutch.py  playerlist.py  pyproject.toml  qdefs.py  rating.py  ratingsimulation.py  (+17 more)
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
gacrux/: chessjson.py  chessserver.py  commonmain.py  convert.py  crosstable.py  crosstabledutch.py  drawresult.py  games2matches.py  helpers.py  jsonscheme.py  pairing.py  pairingberger.py  pairingchecker.py  pairingdutch.py  qdefs.py  rating.py  ratingsimulation.py  scoresystem.py  tiebreak.py  tiebreakchecker.py  tournamentgenerator.py  trf2json.py  ts2json.py  version.py
