[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gacrux"
version = "1.9.53"
authors = [
  { name="Otto Milvang" },
]
description = "FIDE Tournament Pairing Engine Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "networkx>=2.6"
]

[project.scripts]
gacrux-server = "gacrux_entry:run_server"
gacrux-pairing = "gacrux_entry:run_pairing"
gacrux-tiebreak = "gacrux_entry:run_tiebreak"
gacrux-generator = "gacrux_entry:run_generator"

[tool.setuptools]
py-modules = [
    "berger", "chessjson", "chessserver", "commonmain", "convert",
    "crosstable", "crosstabledutch", "drawresult", "fidetables",
    "gacrux_entry", "games2matches", "helpers", "jsonscheme",
    "pairing", "pairingberger", "pairingchecker", "pairingdutch",
    "qdefs", "rating", "scoresystem", "tiebreak", "tiebreakchecker",
    "tiebreaktest", "tournamentgenerator", "trf2json", "ts2json",
    "verifyjch", "version", "xxxmain"
]