[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gacrux"
dynamic = ["version"]
authors = [
  { name="Otto Milvang" },
]
description = "FIDE Tournament Pairing Engine Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx>=2.6"
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/OttoMilvang/TieBreakServer"
Repository = "https://github.com/OttoMilvang/TieBreakServer"

[tool.setuptools.dynamic]
version = {attr = "gacrux.version.__version__"}